# dotfiles

./: .chezmoi.toml.tmpl  .chezmoidata.toml  .chezmoiexternal.toml  .chezmoiignore  .taplo.toml  dot_p10k.zsh  dot_tmux.conf  private_dot_zshrc  run_onchange_after_bat_cache.nu.tmpl  run_onchange_after_bat_cache.sh.tmpl  run_onchange_powershell_modules.ps1.tmpl  run_onchange_powershell_modules_global.ps1.tmpl  symlink_dot_asdf
private_dot_config/exact_astronvim/: dot_luacheckrc  dot_rtx.toml  pyproject.toml
private_dot_config/exact_astronvim/exact_lua/exact_user/: lazy.lua  options.lua  polish.lua
private_dot_config/exact_astronvim/exact_lua/exact_user/exact_heirline/: separators.lua
private_dot_config/exact_astronvim/exact_lua/exact_user/exact_lsp/exact_config/: sumneko_lua.lua
private_dot_config/exact_astronvim/exact_lua/exact_user/exact_plugins/exact_community/: bars-and-lines.lua  color.lua  git.lua  (+13 more)
private_dot_config/exact_nvim/: .chezmoiignore  .chezmoiremove  Gemfile  dot_mise.toml  dot_ruby_version  executable_dot_pnp.cjs  lazy-lock.json  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml
private_dot_config/exact_nvim/exact_dot_ruby-lsp/: main_lockfile_hash
private_dot_config/exact_nvim/exact_lua/: community.lua  lazy_setup.lua
private_dot_config/exact_nvim/exact_lua/exact_plugins/: astrocore.lua  astroui.lua  statusline.lua  user-statusline.lua
private_dot_config/exact_nvim/exact_lua/exact_plugins/exact_user/: bufferline-nvim.lua  chezmoi-telescope-nvim.lua  git-conflict.lua  init.lua  neotest.lua  noice-nvim.lua  statusline.lua  zellij.lua
(+210 files in other folders)
