[tool.poetry]
name = "astronvim"
version = "1.0.0"
description = "AstroNvim Configuration"
authors = ["Ben Woodward <ben@benwoodward.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neovim = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
