[tool.poetry]
name = "nvim"
version = "0.1.0"
description = "Astronvim "
authors = ["Ben Woodward <ben@benwoodward.me.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
neovim = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
